kubernetes/istio-demo/ingress/00-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-demo-server
  labels:
    app: grpc-demo-server
spec:
  ports:
    - name: grpc
      port: 9321
      targetPort: 9321
  selector:
    app: grpc-demo-server
