kubernetes/istio-demo/ingress/01-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-demo-server-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: grpc-demo-server
        protocol: HTTP2
      hosts:
      - "*"
