kubernetes/istio-demo/ingress/13-ingress-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-grpc-demo-server-gateway
spec:
  hosts:
  - "*"
  gateways:
  - security-grpc-demo-server-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grpc-demo-server.default.svc.cluster.local
        port:
          number: 9321
