kubernetes/istio-demo/ingress/31-ingress-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tls-grpc-demo-server-gateway
spec:
  hosts:
  - "*"
  gateways:
  - tls-grpc-demo-server-gateway
  tcp:
  - match:
    - port: 10901
    route:
    - destination:
        host: grpc-demo-server.default.svc.cluster.local
        port:
          number: 9321
